--- a/src/main/java/JDKDBQueryUtil/ReadMe
+++ b/src/main/java/JDKDBQueryUtil/ReadMe
@@ -3,3 +3,7 @@
 3：JdkDBQueryHandler ， 实现 InvocationHandler，用于动态实现真实对象的代理
 4：JDKProxy，同于获取代理对象
 5：Test，获取代理，并且在调用真实对象的方法时才会去真正的实例化真实对象
+
+内部实现机制：
+大纲：1个主题接口，一个具体接口，一个动态实现真实对象的代理，一个获取代理对象
+思路：动态实现真实对象的代理，必须实现InvocationHandler接口，然后实现invoke 方法。这是动态代理真实对象的主要方法。
